# ofw-planning-optimization

./: .env  Dockerfile  README.md  create_digital_twins.py  delete_digital_twin.py  list_digital_twins_models.py  main.py  pyproject.toml  settings.py
archive/: create_digital_twins.py  delete_digital_twin.py  delete_model.py  delete_relationships.py  list_digital_twins_models.py
azure_digital_twin/: adt_client.py  adt_service.py
dt-core/: Dockerfile  run.sh
dt-core/app/: main.py
dt-core/app/api/: api.py
dt-core/app/api/v1/: router.py
dt-core/app/api/v1/endpoints/: dt_crud.py
dt-core/app/conf/: configuration.py
dt-core/app/schemas/requests/: model.py
dt-core/app/services/: adt_service.py
plan-scehdule-opt/: README.md  algo.py  app.py  model.md  model.py  requirements.txt
plan-scehdule-opt/notebooks/: NextrouteBasic.ipynb
utils/: singleton.py
