[tool.poetry]
name = "DT Core"
version = "0.1.0"
description = "Digital Twin Core Services"
authors = ["Aniket Mitra <aniket@computationelewetenschapsgroep.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.112.1"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.3.4"
starlette = "^0.38.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"